--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
           Contact us for inquiries, support, or collaboration opportunities!
         </p>
         <div class="button-container-anmIcon">
-          <a class="primary-btn-anmIcon" href="">
+          <a class="primary-btn-anmIcon" href="careers.html">
             <i class="fas fa-users team-icon"></i>
             <span class="btn-text-anmIcon">Join our Team</span>
           </a>
